sratom (0.4.3) unstable;

  * Escape invalid characters when writing paths as URIs

 -- David Robillard <d@drobilla.net>  Sun, 24 Mar 2013 17:51:07 -0400

sratom (0.4.2) stable;

  * Fix serialisation of nested tuples
  * Fix memory leaks
  * Use new sord API to clean up and shrink code
  * Disable timestamps in HTML documentation for reproducible build
  * Update to waf 1.7.9 and autowaf r90 (install docs to versioned directory)

 -- David Robillard <d@drobilla.net>  Mon, 18 Feb 2013 11:17:01 -0500

sratom (0.4.0) stable;

  * Correctly read objects with several rdf:type properties
  * Support writing Object Atoms as top level descriptions if subject and
    predicate are not given.
  * Fix various hyper-strict warnings
  * Upgrade to waf 1.7.2

 -- David Robillard <d@drobilla.net>  Thu, 23 Aug 2012 01:11:07 -0400

sratom (0.2.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Wed, 18 Apr 2012 15:14:11 -0400