@@ -1,8 +1,9 @@
 sratom (0.4.3) unstable;
 
   * Escape invalid characters when writing paths as URIs
+  * Fancier printing without subject and predicate
 
- -- David Robillard <d@drobilla.net>  Sun, 24 Mar 2013 17:51:07 -0400
+ -- David Robillard <d@drobilla.net>  Sat, 08 Jun 2013 15:33:31 -0400
 
 sratom (0.4.2) stable;
 
